--- a/webapp/root_files/appConfig.json
+++ b/webapp/root_files/appConfig.json
@@ -1,6 +1,6 @@
 {
     "appName": "Indie Game Geeks",
-    "companyPossessive": "Stoic Dreams'",
-    "companySingular": "Stoic Dreams",
-    "api": "https://api.myfi.ws"
+    "appCompanyPossessive": "Stoic Dreams'",
+    "appCompanySingular": "Stoic Dreams",
+    "appApi": "https://api.myfi.ws"
 }
